Gallery view album: mobile view fix. Added padding to text and control buttons. Control buttons are now placed above the album title on small screen devices. Fix #192

--- a/client/src/app/frontend/views/gallery-view/gallery-view-album/gallery-view-album.component.scss
+++ b/client/src/app/frontend/views/gallery-view/gallery-view-album/gallery-view-album.component.scss
@@ -4,9 +4,15 @@
 .tags .tag{margin:0 5px 0 0;}
 .share{float:right;}
 .share a{color:$linkBlue}
+.album-name {
+  text-align: center;
+}
 
 .container {
   padding: 15px 0 15px 0;
+}
+.row {
+  padding: 10px;
 }
 @media (max-width: 768px) {
   h2 {
